--- a/src/compositions/DisasterPosts/DisasterPosts.css
+++ b/src/compositions/DisasterPosts/DisasterPosts.css
@@ -36,3 +36,38 @@
     font-size: 20px;
     margin: 0;
 }
+
+.DisasterPosts .modal-details {
+    display: block;
+    position: relative;
+    margin: auto;
+    z-index: 6;
+    width: 60%;
+    height: fit-content;
+    background-color: white;
+    text-align: center;
+}
+
+.DisasterPosts .modal-details .map {
+    display: block;
+    margin: auto;
+    width: fit-content;
+    background-color: rgb(30, 0, 30, 0.6);
+}
+
+.DisasterPosts .modal-details .close-button {
+    position: absolute;
+    top: 6px;
+    right: 10px;
+    font-size: 16px;
+}
+
+.DisasterPosts .backdrop {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgb(30, 30, 30, 0.6);
+    z-index: 5;
+}
