--- a/src/containers/MainContainer/MainContainer.css
+++ b/src/containers/MainContainer/MainContainer.css
@@ -4,10 +4,20 @@
 
 .MainContainer .tabNavContainer {
     display: grid;
+    margin: 40px;
     grid-template-columns: 1fr 1fr 1fr;
     gap: 10px 30px;
 }
 .MainContainer .tabNavContainer .tabItem {
-    font-size: 24px;
+    font-size: 36px;
     font-family: Arial, Helvetica, sans-serif;
+    cursor: pointer;
+}
+
+.MainContainer .tabNavContainer .active {
+    text-decoration: underline;
+}
+
+.MainContainer .tabNavContainer .tabItem:hover {
+    color: rgb(0, 100, 240)
 }
