--- a/src/compositions/DisasterPosts/DisasterPosts.css
+++ b/src/compositions/DisasterPosts/DisasterPosts.css
@@ -1,16 +1,26 @@
 .DisasterPosts {
-    display: grid;
-    grid-auto-rows: 1fr;
-    gap: 30px 0;
     padding: 60px;
 }
 
 .DisasterPosts .posts-list-container {
+    display: grid;
     height: 800px;
     overflow-y: scroll;
+    gap: 40px 0;
 }
 
-.DisasterPosts .post-details {
+@media (max-width: 1000px) {
+    .DisasterPosts .posts-list-container .post-details {
+        border: solid 1px red;
+        display: grid;
+        grid-template-rows: 1fr 1fr 1fr; 
+        grid-template-areas: 
+            'map-area'
+            'disaster-details-area'
+            'contact-details-area';
+    }
+}
+.DisasterPosts .posts-list-container .post-details {
     border: solid 1px #bcbcbc;
     display: grid;
     grid-template-columns: 1fr 1fr 1fr; 
@@ -18,23 +28,23 @@
         'map-area disaster-details-area contact-details-area'
 }
 
-.DisasterPosts .post-details .contact-details {
+.DisasterPosts .posts-list-container .post-details .contact-details {
     grid-area: contact-details-area;
 }
 
-.DisasterPosts .post-details .map {
+.DisasterPosts .posts-list-container .post-details .map {
     grid-area: map-area;
     border-right: 1px solid #bcbcbc;
 }
 
-.DisasterPosts .post-details .disaster-details {
+.DisasterPosts .posts-list-container .post-details .disaster-details {
     grid-area: disaster-details-area;
     border-right: 1px solid #bcbcbc;
     text-align: left;
     padding: 10px;
 }
 
-.DisasterPosts .post-details .disaster-details .updates-list {
+.DisasterPosts .posts-list-container .post-details .disaster-details .updates-list {
     width: 50%;
 }
 
@@ -53,7 +63,7 @@
     display: block;
     margin: auto;
     width: 100%;
-    background-color: rgb(30, 0, 30, 0.6);
+    border-bottom: 1px solid #4c4c4c;
 }
 
 .DisasterPosts .modal-details .close-button {
