--- a/src/compositions/InfomationalResources/InformationalResources.css
+++ b/src/compositions/InfomationalResources/InformationalResources.css
@@ -1,3 +1,81 @@
 .InformationalResources {
+    --green: #22b573;
+    --gray: #777;
+    --normal-speed: 200ms;
+}
+
+.fancy-checklist {
+  margin: 0;
+  padding: 0;
+  list-style: none;
+  width: 20em;
+}
+
+.fancy-checklist li input[type="checkbox"] {
+    opacity: 0;
+}
+
+.fancy-checklist li label {
+    position: relative;
+    display: inline-block;
     
+    /*16px width of fake checkbox + 6px distance between fake checkbox and text*/
+    padding-left: 2.2em;
+}
+
+.fancy-checklist li input[type="checkbox"]:checked + label {
+  color: gray;
+  text-decoration: line-through;
+}
+
+.fancy-checklist li label::before,
+.fancy-checklist li label::after {
+    position: absolute;
+    content: "";
+
+    /*Needed for the line-height to take effect*/
+    display: inline-block;
+}
+
+/*Outer box of the fake checkbox*/
+.fancy-checklist li label::before{
+    height: 1em;
+    width: 1em;
+    transition: all ease-out 200ms;
+
+    border: 4px solid #000;
+    border-radius: 100%;
+    left: 0em;
+
+    /*adjust to vertically center checkbox*/
+    top: 0;
+}
+
+/*Checkmark of the fake checkbox*/
+.fancy-checklist li label::after {
+    content: "";
+    width: 55px;
+    height: 15px;
+    border-left: 1px solid green;
+    border-bottom: 1px solid green;
+    transform: rotate(-45deg);
+    transition: all ease-out 200ms;
+/*  Positioning of checkmark  */
+    left: 0.2em;
+    top: 0em;
+    opacity: 0;
+}
+
+/*Unhide on the checked state*/
+.fancy-checklist li input[type="checkbox"]:checked + label::after {
+    height: 0.35em;
+    width: 1.5em;
+    opacity: 1;
+   border-width: 4px;
+}
+
+/*Adding focus styles on the outer-box of the fake checkbox*/
+.fancy-checklist li input[type="checkbox"]:checked + label::before {
+/*     outline: rgb(59, 153, 252) auto 5px; */
+    border-color: green;
 }
