--- a/src/compositions/InfomationalResources/InformationalResources.css
+++ b/src/compositions/InfomationalResources/InformationalResources.css
@@ -1,19 +1,20 @@
 .InformationalResources {
 }
 
+.InformationalResources ul {
+  list-style: none;
+  padding: 0;
+}
+
 .fancy-checklist {
   --green: #22b573;
   --gray: #777;
   --normal-speed: 200ms;
-
   line-height: 1.2em;
-  padding: 0;
-  list-style: none;
-  width: 15em;
 }
 
 .fancy-checklist li {
-  margin: 0.5em 0;
+  margin: 0.5em;
 }
 
 .fancy-checklist li input[type="checkbox"] {
@@ -23,6 +24,7 @@
 }
 
 .fancy-checklist li label {
+    /* so child elements are positioned relative to this */
     position: relative;
     display: inline-block;
     cursor: pointer;
@@ -37,7 +39,7 @@
 
 /* Styled text label checked state */
 .fancy-checklist li input[type="checkbox"]:checked + label {
-  color: gray;
+  color: var(--gray);
   text-decoration: line-through;
 }
 
@@ -56,7 +58,7 @@
     height: 1em;
     width: 1em;
     transition: all ease-out 200ms;
-    border: 1px solid #777;
+    border: 1px solid var(--gray);
     border-radius: 100%;
     left: 0;
     top: 0;
@@ -68,9 +70,9 @@
     /* checkmark left side = height, right side = width */
     width: 4em;
     height: 1em;
-    border-left: 1px solid green;
-    border-bottom: 1px solid green;
-    transition: all ease-out 200ms;
+    border-left: 1px solid var(--green);
+    border-bottom: 1px solid var(--green);
+    transition: all ease-out var(--normal-speed);
 /*  Positioning of checkmark  */
     left: 0.2em;
     top: 0;
@@ -87,6 +89,6 @@
 
 /* Styled outer box checked state */
 .fancy-checklist li input[type="checkbox"]:checked + label::before {
-  border-color: green;
+  border-color: var(--green)green;
   border-width: 3px;
 }
