increase base font size, info resources: limit max-width for readability, de list-style ol's

--- a/src/compositions/InfomationalResources/InformationalResources.css
+++ b/src/compositions/InfomationalResources/InformationalResources.css
@@ -1,7 +1,12 @@
 .InformationalResources {
+  /* limit content width for readability/usability ~80 charcters per line*/
+  max-width: 37em;
+  margin: auto;
 }
 
-.InformationalResources ul {
+.InformationalResources ul,
+.InformationalResources ol,
+ {
   list-style: none;
   padding: 0;
 }
