fill out more content for inforesourcesmarkup, import/return markup content in informationalresources.js

--- a/src/compositions/InfomationalResources/InformationalResources.css
+++ b/src/compositions/InfomationalResources/InformationalResources.css
@@ -94,6 +94,6 @@
 
 /* Styled outer box checked state */
 .fancy-checklist li input[type="checkbox"]:checked + label::before {
-  border-color: var(--green)green;
+  border-color: var(--green);
   border-width: 3px;
 }
