--- a/src/containers/App/App.css
+++ b/src/containers/App/App.css
@@ -1,5 +1,6 @@
 .App {
   text-align: center;
+  background-color: #6b6b6b;
 }
 
 .App-logo {
@@ -11,7 +12,7 @@
   background-color: #222;
   height: 150px;
   padding: 20px;
-  color: white;
+  color: #9c9c9c;
 }
 
 .App-title {
