--- a/src/compositions/DisasterPosts/DisasterPosts.css
+++ b/src/compositions/DisasterPosts/DisasterPosts.css
@@ -13,8 +13,8 @@
     .DisasterPosts .posts-list-container .post-details {
         border: solid 1px red;
         display: grid;
-        grid-template-rows: 1fr 1fr 1fr; 
-        grid-template-areas: 
+        grid-template-rows: 1fr 1fr 1fr;
+        grid-template-areas:
             'map-area'
             'disaster-details-area'
             'contact-details-area';
@@ -23,8 +23,8 @@
 .DisasterPosts .posts-list-container .post-details {
     border: solid 1px #bcbcbc;
     display: grid;
-    grid-template-columns: 1fr 1fr 1fr; 
-    grid-template-areas: 
+    grid-template-columns: 1fr 1fr 1fr;
+    grid-template-areas:
         'map-area disaster-details-area contact-details-area'
 }
 
@@ -50,20 +50,56 @@
 
 .DisasterPosts .modal-details {
     display: block;
-    position: relative;
-    margin: auto;
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
     z-index: 6;
     width: 60%;
-    height: fit-content;
+    overflow-y: auto;
     background-color: white;
     text-align: center;
 }
 
-.DisasterPosts .modal-details .map {
+.DisasterPosts .modal-details .modal-col {
+    display: inline-block;
+    float: left;
+    width: 70%;
+}
+
+.DisasterPosts .modal-details .modal-col .map {
+    display: inline-block;
+    width: 100%;
+    height: 90%;
+}
+
+.DisasterPosts .modal-details .disaster-details {
+    display: inline-block;
+    float: right;
+    height: 100%;
+    width: 30%;
+}
+
+.DisasterPosts .modal-details .disaster-details .address-details {
     display: block;
-    margin: auto;
+    text-align: left;
+    height: 28%;
     width: 100%;
     border-bottom: 1px solid #4c4c4c;
+}
+
+.DisasterPosts .modal-details .disaster-details .inform-details {
+    display: block;
+    text-align: left;
+    width: 100%;
+    height: 72%;
+    overflow-y: auto;
+}
+
+.DisasterPosts .modal-details .modal-col aside.contact-details {
+    display: inline-block;
+    text-align: left;
+    width: 100%;
 }
 
 .DisasterPosts .modal-details .close-button {
