--- a/src/components/FormFields/FormFields.css
+++ b/src/components/FormFields/FormFields.css
@@ -4,7 +4,7 @@
     padding: 10px;
 }
 
-.input-group label 
+.input-group label
 {
     display: block;
     padding-bottom: 5px;
@@ -13,9 +13,11 @@
 .input-group input, .input-group textarea
 {
     display: block;
-    width: 250px;
-
-    font-size: 11pt;
+    width: 100%;
+    font-size: 1em;
+    padding: 0.5em;
+    border-radius: 3px;
+    background: #f9f9f9;
 }
 
 .update-container
@@ -29,6 +31,7 @@
     display: block;
     height: 24px;
     margin-bottom: 10px;
+    margin-left: 1em;
 }
 
 .input-error-msg
