--- a/src/compositions/DisasterPosts/DisasterPosts.css
+++ b/src/compositions/DisasterPosts/DisasterPosts.css
@@ -1,29 +1,31 @@
 .DisasterPosts {
-    padding-left: 60px;
-    padding-right: 60px;
+  max-width: 50em;
+  padding: 0 2em;
+  margin: auto;
 }
 
 .DisasterPosts .posts-list-container {
     display: grid;
-    height: 800px;
-    overflow-y: scroll;
-    gap: 40px 0;
+    gap: 1em 0;
+    margin: 2em auto;
+
 }
 
 @media (max-width: 1000px) {
-    .DisasterPosts .posts-list-container .post-details {
+    /* .DisasterPosts .posts-list-container .post-details {
         border: solid 1px red;
         display: grid;
-
         grid-template-rows: 1fr 1fr 1fr;
         grid-template-areas:
             'map-area'
             'disaster-details-area'
             'contact-details-area';
-    }
+    } */
 }
 .DisasterPosts .posts-list-container .post-details {
     border: solid 1px #bcbcbc;
+    background: #f9f9f9;
+    border-radius: 0.5em;
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
     grid-template-areas:
@@ -32,18 +34,20 @@
 
 .DisasterPosts .posts-list-container .post-details .contact-details {
     grid-area: contact-details-area;
+    padding: 1em;
 }
 
 .DisasterPosts .posts-list-container .post-details .map {
     grid-area: map-area;
     border-right: 1px solid #bcbcbc;
+    padding: 1em;
 }
 
 .DisasterPosts .posts-list-container .post-details .disaster-details {
     grid-area: disaster-details-area;
     border-right: 1px solid #bcbcbc;
     text-align: left;
-    padding: 10px;
+    padding: 1em;
 }
 
 .DisasterPosts .posts-list-container .post-details .disaster-details .updates-list {
