--- a/src/compositions/InfomationalResources/InformationalResources.css
+++ b/src/compositions/InfomationalResources/InformationalResources.css
@@ -1,6 +1,7 @@
 .InformationalResources {
   /* limit content width for readability/usability ~80 charcters per line*/
-  max-width: 37em;
+  max-width: 50em;
+  padding: 0 2em;
   margin: auto;
 }
 
