--- a/src/containers/App/App.css
+++ b/src/containers/App/App.css
@@ -1,28 +1,14 @@
 .App {
   text-align: center;
-  background-color: #6b6b6b;
-  width: fit-content;
-}
-
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 80px;
 }
 
 .App-header {
-  background-color: #222;
-  height: 150px;
-  padding: 20px;
+  display: flex;
+  justify-content: space-between;
+  background-color: #000;
   color: #9c9c9c;
 }
 
 .App-title {
   font-size: 1.5em;
-}
-
-
-
-@keyframes App-logo-spin {
-  from { transform: rotate(0deg); }
-  to { transform: rotate(360deg); }
 }
