--- a/src/index.css
+++ b/src/index.css
@@ -4,5 +4,5 @@ body {
   margin: 0;
   padding: 0;
   font-size: 20px;
-  font-family: sans-serif;
+  font-family: Arial,"Helvetica Neue",Helvetica,sans-serif; ;
 }
